retrofit homebrew config

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -41,14 +41,13 @@ changelog:
 
 brews:
   -
-    name: homebrew-cleanup-s3-objects
+    name: cleanup-s3-objects
     url_template: "https://github.com/bananaumai/cleanup-s3-objects/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
     download_strategy: CurlDownloadStrategy
     commit_author:
       name: bananaumai
       email: banana.umai@gmail.com
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
-    folder: Formula
     homepage: 'https://github.com/bananaumai/cleanup-s3-objects'
     description: 'CLI tool to delete all versions of objects and delete markers from a S3 bucket'
     license: MIT
